--- a/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/approval-list/approval-list.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/approval-list/approval-list.jrxml
@@ -49,14 +49,8 @@
 	<field name="col_AproveList.ApproveEnd" class="java.util.Date">
 		<fieldDescription><![CDATA[Дата согласования по документу]]></fieldDescription>
 	</field>
-	<field name="col_ExecEmployee.FirstName" class="java.lang.String">
+	<field name="col_ExecEmployee" class="java.lang.String">
 		<fieldDescription><![CDATA[Имя Исполнителя]]></fieldDescription>
-	</field>
-	<field name="col_ExecEmployee.LastName" class="java.lang.String">
-		<fieldDescription><![CDATA[Фамилия Исполнителя]]></fieldDescription>
-	</field>
-	<field name="col_ExecEmployee.MiddleName" class="java.lang.String">
-		<fieldDescription><![CDATA[Отчество Исполнителя]]></fieldDescription>
 	</field>
 	<field name="col_ExecEmployee.StaffPosition.Id" class="java.lang.String">
 		<fieldDescription><![CDATA[Должность Исполнителя.id]]></fieldDescription>
@@ -79,14 +73,8 @@
 	<field name="col_Item.ApproveDate" class="java.util.Date">
 		<fieldDescription><![CDATA[Дата согласования Сотрудником]]></fieldDescription>
 	</field>
-	<field name="col_Item.Employee.FirstName" class="java.lang.String">
+	<field name="col_Item.Employee" class="java.lang.String">
 		<fieldDescription><![CDATA[Имя Согласующего]]></fieldDescription>
-	</field>
-	<field name="col_Item.Employee.LastName" class="java.lang.String">
-		<fieldDescription><![CDATA[Фамилия Согласующего]]></fieldDescription>
-	</field>
-	<field name="col_Item.Employee.MiddleName" class="java.lang.String">
-		<fieldDescription><![CDATA[Отчество Согласующего]]></fieldDescription>
 	</field>
 	<field name="col_Item.Employee.StaffPosition.Id" class="java.lang.String">
 		<fieldDescription><![CDATA[Должность Сотрудника]]></fieldDescription>
@@ -137,7 +125,7 @@
 				<textElement textAlignment="Left" verticalAlignment="Top">
 					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Исполнитель: "+ ($F{col_ExecEmployee.LastName} == null ? "" : $F{col_ExecEmployee.LastName})+( $F{col_ExecEmployee.FirstName} == null ? "" : " "+ ($F{col_ExecEmployee.FirstName} + " ").substring(0,1))+ ($F{col_ExecEmployee.MiddleName} == null ? "" : "."+ ($F{col_ExecEmployee.MiddleName}+ " ").substring(0,1))+ ($F{col_ExecEmployee.StaffPosition.Name} == null ? "" : ", "+ $F{col_ExecEmployee.StaffPosition.Name}) + ($F{col_ExecEmployee.Unit.Name} == null ? "" : ", "+ $F{col_ExecEmployee.Unit.Name})]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Исполнитель: " + ($F{col_ExecEmployee} == null ? "" : $F{col_ExecEmployee})+ ($F{col_ExecEmployee.StaffPosition.Name} == null ? "" : ", "+ $F{col_ExecEmployee.StaffPosition.Name}) + ($F{col_ExecEmployee.Unit.Name} == null ? "" : ", "+ $F{col_ExecEmployee.Unit.Name})]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="57733b0b-8072-4194-ad89-e36d5cf70a4b" positionType="FixRelativeToBottom" x="362" y="30" width="180" height="32"/>
@@ -230,7 +218,7 @@
 					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" spacingBefore="1" spacingAfter="1" tabStopWidth="30"/>
 				</textElement>
-				<textFieldExpression><![CDATA[($F{col_Item.Employee.LastName} == null ? "" : $F{col_Item.Employee.LastName})+ ($F{col_Item.Employee.FirstName} == null ? "" : " "+ ($F{col_Item.Employee.FirstName}+ " ").substring( 0, 1 ))+ ($F{col_Item.Employee.MiddleName} == null ? "" : "."+ ($F{col_Item.Employee.MiddleName}+ " ").substring(0,1)) + ($F{col_Item.Employee.StaffPosition.Name} == null ? "" : ", "+ $F{col_Item.Employee.StaffPosition.Name}) + ($F{col_Item.Employee.Unit.Name} == null ? "" : ", "+ $F{col_Item.Employee.Unit.Name})]]></textFieldExpression>
+				<textFieldExpression><![CDATA[($F{col_Item.Employee} == null ? "" : $F{col_Item.Employee}) + ($F{col_Item.Employee.StaffPosition.Name} == null ? "" : ", "+ $F{col_Item.Employee.StaffPosition.Name}) + ($F{col_Item.Employee.Unit.Name} == null ? "" : ", "+ $F{col_Item.Employee.Unit.Name})]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy" isBlankWhenNull="true">
 				<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" x="624" y="2" width="100" height="22"/>
