[~] лист согласования и досье договора - рефакторинг и исправление ошибок
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5044 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/contract-delta-list-byid/contract-delta-list-byid.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/contract-delta-list-byid/contract-delta-list-byid.jrxml
@@ -123,7 +123,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Top" markup="none">
 					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Тип документа"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Название документа"]]></textFieldExpression>
 			</textField>
 			<textField pattern="" isBlankWhenNull="true">
 				<reportElement uuid="8e330edb-4053-4fa9-8b27-970e51dedebf" x="202" y="3" width="68" height="26"/>
