ALF-1608: Механизм подсчета формул для числовых полей (Min, Max, AVG, Total): выделение результирующей строки
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5098 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/datagrid.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/datagrid.css
@@ -71,3 +71,9 @@
 .form-field.with-grid.grid-control{
     clear: both;
 }
+
+.yui-dt tr.total-row,
+.yui-dt tr.total-row td {
+	background-color: #a33;
+	color: #fff;
+}
