ALF-1608: Механизм подсчета формул для числовых полей (Min, Max, AVG, Total): добавление записей в таблицу делается перед результирующей строкой
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5101 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/datagrid.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/datagrid.css
@@ -68,8 +68,9 @@
     background-image: url("/share/res/images/lecm-base/components/triangle_up.png");
 }
 
-.yui-dt tr.total-row,
-.yui-dt tr.total-row td {
+.yui-skin-lecmTheme .datagrid .yui-dt tr.total-row,
+.yui-skin-lecmTheme .datagrid .yui-dt tr.total-row td.yui-dt-asc,
+.yui-skin-lecmTheme .datagrid .yui-dt tr.total-row td.yui-dt-desc {
 	background-color: #a33;
 	color: #fff;
 }
