Fix header for grid
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5104 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2584,11 +2584,11 @@ span.person a div.description:empty {
 }
 
 /* Datagrid : table : fixed header - start */
-.yui-skin-lecmTheme div.grid table.fixedHeader thead tr {
+.yui-skin-lecmTheme div.grid table.fixedHeader > thead > tr {
     display: block;
     position: relative;
 }
-.yui-skin-lecmTheme div.grid table.fixedHeader tbody {
+.yui-skin-lecmTheme div.grid table.fixedHeader > tbody {
     width: 100%;
     max-height: 80px;
     overflow: auto;
