ALF-1619 : Отображение подключенных таблиц на документе. Стили и разметка
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5106 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/datagrid.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/datagrid.css
@@ -71,6 +71,7 @@
 .yui-skin-lecmTheme .datagrid .yui-dt tr.total-row,
 .yui-skin-lecmTheme .datagrid .yui-dt tr.total-row td.yui-dt-asc,
 .yui-skin-lecmTheme .datagrid .yui-dt tr.total-row td.yui-dt-desc {
-	background-color: #a33;
-	color: #fff;
+	background-color: #cbcbcb;
+	color: #333;
+    font-weight: bold;
 }
